--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "debug-tool",
+  "name": "debugging-tool",
   "version": "1.0.0",
   "description": "A utility package to debug api",
   "main": "index.js",
